--- a/data/interfaces/default/css/tautulli.css
+++ b/data/interfaces/default/css/tautulli.css
@@ -4510,6 +4510,12 @@ a.donate-with-crypto::after {
 }
 
 #api_qr_code {
-    padding: 1px;
+    width: 100%;
+    padding: 0;
+    margin: 0 0 10px;
     line-height: 1;
+    text-align: center;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
