Add docker mount warning message

--- a/data/interfaces/default/css/tautulli.css
+++ b/data/interfaces/default/css/tautulli.css
@@ -4522,3 +4522,9 @@ a.donate-with-crypto::after {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+
+.docker-mount {
+    margin: 20px auto 0 auto;
+    position: relative;
+    z-index: 9999;
+}
