--- a/lib/cloudinary/templates/cloudinary_includes.html
+++ b/lib/cloudinary/templates/cloudinary_includes.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <script src="{% static "js/jquery.ui.widget.js" %}" type="text/javascript"></script>
 <script src="{% static "js/jquery.iframe-transport.js" %}" type="text/javascript"></script>
