optimize colors and padding

--- a/data/interfaces/default/css/tautulli.css
+++ b/data/interfaces/default/css/tautulli.css
@@ -2855,30 +2855,28 @@ a .home-platforms-list-cover-face:hover
     max-width: 350px;
 }
 .circle {
-    margin: 0.05rem;
-    display: inline-block;
     width: 1.55rem;
     height: 1.55rem;
     border-radius: 50%;
-    border: 0.2rem solid white;
+    border: 0.2rem solid #eeeeee;
 }
 .circle-quarter {
     background-image:
-    linear-gradient(00deg, #0e253f 50%, transparent 50%),
-    linear-gradient(270deg, #d1d1d1 50%, transparent 50%);
+    linear-gradient(00deg, #2b2b2b 50%, transparent 50%),
+    linear-gradient(270deg, #eeeeee 50%, transparent 50%);
 }
 .circle-half {
     background-image:
-    linear-gradient(90deg, #0e253f 50%, transparent 50%),
-    linear-gradient(-90deg, #d1d1d1 50%, transparent 50%);
+    linear-gradient(90deg, #2b2b2b 50%, transparent 50%),
+    linear-gradient(-90deg, #eeeeee 50%, transparent 50%);
     }
 .circle-three-quarter {
     background-image:
-    linear-gradient(180deg, transparent 50%, #d1d1d1 50%),
-    linear-gradient(-90deg, #d1d1d1 50%, transparent 50%);
+    linear-gradient(180deg, transparent 50%, #eeeeee 50%),
+    linear-gradient(-90deg, #eeeeee 50%, transparent 50%);
 }
 .circle-full {
-    background: #d1d1d1;
+    background: #eeeeee;
 }
 #graph-tabs {
     padding-bottom: 10px;
